--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "poly-glide-template",
-  "description": "This is a template project to demonstrate how to integrate with PolyAPI in a git-centric typescript workflow.",
-  "author": "",
-  "license": "MIT",
-  "version": "0.0.1",
+  "name": "poly-glide-demo",
+  "description": "This is a demo project to demonstrate how to integrate with PolyAPI in a git-centric typescript workflow.",
+  "author": "Danijel Dragicevic",
+  "license": "Apache-2.0",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 2",
@@ -22,12 +22,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/polyapi/poly-glide-template-js.git"
+    "url": "git+https://github.com/polyapi/poly-glide-demo.git"
   },
   "keywords": [],
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/polyapi/poly-glide-template-js/issues"
+    "url": "https://github.com/polyapi/poly-glide-demo/issues"
   },
-  "homepage": "https://github.com/polyapi/poly-glide-template-js#readme"
+  "homepage": "https://github.com/polyapi/poly-glide-demo#readme"
 }
