--- a/.github/workflows/scheduled-tests.yml
+++ b/.github/workflows/scheduled-tests.yml
@@ -1,6 +1,10 @@
 name: Scheduled integration tests
 
 on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '*/5 * * * *' # every 5 minutes
 
