Run integration tests every 30 minutes

--- a/.github/workflows/scheduled-tests.yml
+++ b/.github/workflows/scheduled-tests.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '*/5 * * * *' # every 5 minutes
+    - cron: '*/30 * * * *' # Run every 30 minutes
 
 jobs:
   test:
