--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,29 +48,7 @@ jobs:
         env:
           POLY_API_KEY: ${{ secrets.POLY_API_KEY_PROD }}
           POLY_API_BASE_URL: ${{ secrets.POLY_API_BASE_URL_PROD }}
-          POLY_SNIPPET_CONTEXT: demo
-        run: |
-          set -euo pipefail
-
-          if [ ! -d src/snippets ]; then
-            echo "No src/snippets directory found. Skipping snippet deployment."
-            exit 0
-          fi
-
-          shopt -s nullglob
-          files=(src/snippets/*.ts)
-
-          if [ ${#files[@]} -eq 0 ]; then
-            echo "No TypeScript snippets found in src/snippets. Skipping snippet deployment."
-            exit 0
-          fi
-
-          for file in "${files[@]}"; do
-            base="$(basename "$file" .ts)"
-
-            echo "Deploying snippet: $base ($file)"
-            npx poly snippet add "$base" "$file" --context "$POLY_SNIPPET_CONTEXT" --description "Snippet synced from GitHub Actions"
-          done
+        run: npx poly snippet add ApiErrors ./snippets/ApiErrors.ts --context demo --description "Snippet synced from GitHub Actions"
 
       - name: Poly Deploy
         uses: polyapi/poly-deployment-action-js@v0.2.17
