--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run integration tests
+      - name: Run integration tests for weather data
         run: npm test ./test/serverFunctions/getWeatherData.int.test.ts 
+      - name: Run integration tests for city name
+        run: npm test ./test/serverFunctions/getCityName.int.test.ts
